objects/Pardot_List__c.object
<CustomObject>
    <description>Pardot list table synched from Pardot application</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_ListId__c</fullName>
        <formula>Text( ListId__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCrmVisible__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IsCrmVisible</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IsDeleted</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsDynamic__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IsDynamic</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsPublic__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IsPublic</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ListId__c</fullName>
        <description>Pardot List ID</description>
        <externalId>true</externalId>
        <label>ListId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Pardot List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Description__c</columns>
        <columns>IsPublic__c</columns>
        <columns>IsCrmVisible__c</columns>
        <columns>ListId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Validation</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ListId__c</columns>
        <columns>F_ListId__c</columns>
        <columns>Name__c</columns>
        <columns>Title__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Validation</label>
    </listViews>
    <nameField>
        <label>Pardot List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pardot List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>